🐛 Fix header letter-spacing bug for wide screens

--- a/assets/_sass/global/_typography.scss
+++ b/assets/_sass/global/_typography.scss
@@ -144,6 +144,10 @@ h1 {
       opacity: 0;
       transform: scale(.4, .8);
 
+      @include mq($bp-medium) {
+        min-width: 16px;
+      }
+
       @for $i from 1 through 25 {
 
         &:nth-child(#{$i}) {
